css/index.css
html,
body{
  margin: 0;
  padding: 0;
  min-height: 100vh;
  max-height: 100vh;
}
body{
  font-family: 'Montserrat', sans-serif;
  font-size: 1em;
  background: rgba(241, 196, 15,0.7);
  color: #454545;
}

.header-container{
  max-width: 320px;
  margin: auto;
  text-align: center;
}
.title{
  margin: 15px 0px;
}
.description{
  margin: 5px 0px;
}
.content-container{
  max-width: 320px;
  margin: auto;
  position: relative;
}
.section-cont{
  display: flex;
  flex-direction: column;
  border-radius: 5px;
  box-shadow: 0 0 10px 2px rgba(0,0,0,.4);
  padding: 25px;
  position: absolute;
  width: 100%;
  box-sizing: border-box;
}

.input-group{
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 15px 0px;
}
.input-check{
  display: flex;
  align-items: center;
  margin: 3px 0px;
}

/**
*
* FORM ELEMENTS
*
*/
.form-input{
  border: 1px solid #454545;
  padding: 5px;
  margin: 0px auto;
  width: 70%;
  border-radius: 5px;
  background: transparent;
  color: #454545;
}
.form-input:focus{
  outline: none;
}
.form-label{
  width: 30%;
  padding: 5px;
  margin: 0px auto;
}
.form-label-full{
  width: 100%;
  box-sizing: border-box;
  padding: 5px;
  margin: 0px auto 10px auto;
}
.form-button{
  cursor: pointer;
  background: #e3e3e3;
  border-radius: 5px;
  border: 1px solid #454545;
  padding: 5px;
  /* margin-top: 25px; */
  width: 40%;
  margin: 0px auto;
  color: #454545;
  transition: all .3s ease-in-out;
}
.form-button:hover{
  background: #454545;
  color: #e3e3e3;
  border-color: #e3e3e3;
}
.form-button:focus{
  outline: none;
}
.form-textarea{
  width: 100%;
  resize: none;
  border: 1px solid #454545;
  padding: 10px;
  box-sizing: border-box;
  margin: 0px auto;
  border-radius: 5px;
  background: rgba(255,255,255,.6);
  color: #454545;
}
.form-textarea:focus{
  outline: none;
}
.dropdown{
  width: 100%;
  padding: 5px;
  box-sizing: border-box;
  border-radius: 5px;
  border: 1px solid #454545;
  background: rgba(255,255,255,.6);
  margin-bottom: 20px;
}
.dropdown:focus{
  outline: none;
}
.form-radio{
  margin-right: 10px;
}
/**
*
* JS ANIMATION
*
*/
.presentation, .profile,.comments{
  margin-top: 40%;
}
.selection{
  margin-top: 5%; 
}
.profile, .selection, .comments{
  transform: translateX(300%);
}

.hide{
  animation: slide-out 1s forwards ease-in-out;
}
.show{
  animation: slide-in 1s forwards ease-in-out;
}
.gobackin{
  animation: slide-back-in 1s forwards ease-in-out;
}
.gobackout{
  animation: slide-back-out 1s forwards ease-in-out;
}

@keyframes slide-out {
  from{transform: translateX(0%);}
  to{transform: translateX(-300%);}
}
@keyframes slide-in {
  from{transform: translateX(300%);}
  to{transform: translateX(0%);}
}
@keyframes slide-back-in {
  from{transform: translateX(-300%);}
  to{transform: translateX(0%);}
}
@keyframes slide-back-out {
  from{transform: translateX(0%);}
  to{transform: translateX(300%);}
}

@media only screen and (min-width: 768px){
  .header-container, .content-container{
    max-width: 630px;
  }
  .presentation, .profile,.comments{
    margin-top: 20%;
  }
  .selection{
    margin-top: 10%; 
  }
}

@media only screen and (min-width: 980px){
  .header-container, .content-container{
    max-width: 840px;
  }
  .presentation, .profile,.comments{
    margin-top: 20%;
  }
  .selection{
    margin-top: 10%; 
  }
}

@media only screen and (min-width: 1200px){
  .header-container, .content-container{
    max-width: 1040px;
  }
  .presentation, .profile,.comments{
    margin-top: 20%;
  }
  .selection{
    margin-top: 10%; 
  }
}

